# stegoninja-cpp

./: CMakeLists.txt  Dockerfile  README.md  compose.yml  index.html  webserver.cpp
include/: convertToBMP.h  imgBPCSEmbed.h  stegano.h  vigenere.h
include-web/: BMPstruct.h  imgBPCSExtract.h  parse_multipart.h
src/: audio.cpp  imgBPCSEmbed.cpp  imgBPCSExtract.cpp  main.cpp  stegano.cpp  video.cpp  vigenere.cpp
src/Another/: CMakeLists.txt
web/: BMPstruct.cpp  convertToBMP.cpp  imgBPCSEmbed.cpp  imgBPCSExtract.cpp  parse_multipart.cpp
